Add progress saving
Moved the server into own "server" folder
Add continuation based on the progress
Changed config a small bit to reflect the java equivalent
Changed user dialog when a config is detected
Fixed a bug where average cps would not be shown when pregen completed